<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calc</string>
    <string name="action_settings">Settings</string>
    <string name="tvAmount">Bill Amount:</string>
    <string name="b10">%10</string>
    <string name="b15">%15</string>
    <string name="b20">%20</string>
    <string name="tvTotal">Total:</string>
    <string name="tvTip">Tip:</string>
    <string name="tvTipAmount">0.00</string>
    <string name="tvSum">$0.00</string>
    <string name="etAmount_hint">0.00</string>

</resources>
