<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalc" >

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:text="@string/tvAmount"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:digits="0123456789."
        android:ems="10"
        android:gravity="right"
        android:hint="@string/etAmount_hint"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_toLeftOf="@+id/tvTipAmount"
        android:text="@string/tvTip"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etAmount"
        android:gravity="right"
        android:text="@string/tvTipAmount"
        android:textSize="30sp"
        android:textStyle="italic" />

    <kankan.wheel.widget.WheelView
        android:id="@+id/wvTipRate"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvAmount" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTip"
        android:layout_toLeftOf="@+id/tvTipAmount"
        android:text="@string/tvTotal"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvSum"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTipAmount"
        android:gravity="right"
        android:text="@string/tvSum"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

</RelativeLayout>